Services, Observables, Injection and Webserver Data Transfer

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,8 @@
 <div>
+
+    <div style="width: 500px; height: 300px; border-color:blue; border-style: solid;">
+
+    </div>
     <mat-calendar [(selected)]="selectedDate"></mat-calendar>
     {{selectedDate.toLocaleDateString()}}
     <a [routerLink]="['/tasks', {date: selectedDate}]">Tasks</a>
